12345678901234567890123456789012345678901234567890123456789012345678901234567890
         1         2         3         4         5         6         7         8
----+----|----+----|----+----|----+----|----+----|----+----|----+----|----+----|



ChangeLog (IOMETER2 - 2004.mm.dd):
==================================

- Applied patches:
   - iometer-2004.07.30-post.Ming002AbsolutePathForDevices.patch by
     Ming Zhang (Small patch that now reports the raw device names
     with leading RAW_DEVICE_DIR instead of the constant "/dev").
   - iometer-2004.07.30-post.Daniel001RemoveReportedAsLogical.patch
     by Daniel Scheibli (Minor cleanup that removes the no longer
     used Report_As_Logical() function).
   - em64t.patch by Henryx W. Tieman (Adds the x86_64 port for AMD
     Operton and Intel Xeon with EM64T running Linux or Windows).
   - iometer-2004.07.30-post.Ming001AnyBlockDevice.patch by Ming Zhang
     (adds command line arguments to the Linux and Solaris variant of
     Dynamo, to allow the user to specify block devices which are not
     detected by the automatic detection).
   - iometer-2003.12.16-post.DS3-netware.patch by Thayne Harmon (Fixes
     the detection of the volumens - for the NetWare port).
   - IOGrunt.patch by Lamont Cranston (Prevents a shifting queue for
     the transaction slots in IOGrunt and that way ensures that two
     runs of the same test are closer together).
   - invalid_spec.patch by Lamont Cranston (Allows the user to set any
     request sizes, sector allignment etc. - even if it doesn't match the
     storage devices block size. While in interactive mode, the user
     must confirm his will - in batch mode invalid specifications gets
     executed without requiring any kind of confirmation / force flag).
   - scross_spec_list.patch by Lamont Cranston (Ensures that the access
     specification list gets scrolled during the run - so the active
     access specification can always be seen).