@@ -45,7 +45,9 @@
 ##                                                                           ##
 ## ------------------------------------------------------------------------- ##
 ##                                                                           ##
-##  Changes ...: 2004-05-27 (henryx.w.tieman@intel.com)                      ##
+##  Changes ...: 2005-02-26 (mingz@ele.uri.edu)                              ##
+##               - Added NOMINMAX definition.                                ##
+##               2004-05-27 (henryx.w.tieman@intel.com)                      ##
 ##               - Initial drop for building Dynamo for Linux on x86_64.     ##
 ##                                                                           ##
 ###############################################################################
@@ -76,7 +78,7 @@ CFLAGS=	-O \
 	-DIOMTR_CPU_X86_64 \
 	-DIOMTR_SETTING_GCC_M64 \
 	-D_LARGEFILE_SOURCE -D_LARGEFILE64_SOURCE -D_FILE_OFFSET_BITS=64 \
-	-D_REENTRANT
+	-D_REENTRANT -DNOMINMAX
 #	-ggdb
 
 
@@ -138,6 +140,3 @@ iometer:
 
 .c.o:
 	$(CXX) $(CFLAGS) -c $<
-
-
-
