@@ -8,6 +8,8 @@ ChangeLog (IOMETER2 - 2004.mm.dd):
 ==================================
 
 - Applied patches:
+   - iometer-2004.07.30-post.Ming003Gcc34Support.patch by Ming Zhang
+     (Adds support for the gcc 3.4 compiler).   
    - iometer-2004.07.30-post.Ming002AbsolutePathForDevices.patch by
      Ming Zhang (Small patch that now reports the raw device names
      with leading RAW_DEVICE_DIR instead of the constant "/dev").
